--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,7 @@
-Flask==3.0.3
-opencv-python
-numpy
-gunicorn
-xvfbwrapper==0.2.9
-pyautogui
-flask_sqlalchemy
-werkzeug.security
-flask_session
-numpy
-pyautogui
-cv2
-pyodbc
-pyvirtualdisplay
+Flask==2.0.1
+Flask-Session==0.4.0
+pyodbc==4.0.32
+Werkzeug==2.0.1
+pyautogui==0.9.53
+opencv-python==4.5.3.56
+numpy==1.21.1
