--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ Werkzeug==2.3.6
 opencv-python==4.8.0.76
 pyautogui==0.9.54
 numpy==1.23.5
-gunicorn
-flask_sqlalchemy
+gunicorn==23.0.0
+flask_sqlalchemy==3.0.3
